--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     <footer>
         <span class="spanpadd"><p>נבנה ב-<span class="love-icon">&#10084; </span>על ידי <a href="http://guribs.com">גוראל</a>.</p></span>
     </footer>
-    <script src="./index.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
